--- a/index.html
+++ b/index.html
@@ -5,20 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./dist/css/main.css">
   <title>Frontend Mentor | Stats preview card component</title>
-  
-  <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
 </head>
 <body>
   <main class="hero container">
     
     <div class="secondary-container row">
       <div class="hero__image-container col">
-        <img src="./images/image-header-mobile.jpg" alt="three caucasian women working in an office" class="hero__image">
+        <img src="./dist/images/image-header-mobile.jpg" alt="three caucasian women working in an office" class="hero__image">
       </div>
       
       <div class="hero__text col">
@@ -51,10 +46,5 @@
     </div>
 
   </main>
-
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
 </body>
 </html>
